[package]
name = "ts_aggregates"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg12"]
pg10 = ["pgx/pg10"]
pg11 = ["pgx/pg11"]
pg12 = ["pgx/pg12"]
pg_test = []

[dependencies]
pgx = "0.0.15"
pgx-macros = "0.0.15"
serde = "1.0.114"

[dependencies.flat_serialize]
git = "https://github.com/JLockerman/flat_serialize"
rev = "da5a558"

[dependencies.flat_serialize_macro]
git = "https://github.com/JLockerman/flat_serialize"
rev = "da5a558"


[dev-dependencies]
pgx-tests = "0.0.15"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
